# Modern_C_Training

./: README.md
Modern_C_Training/Assert/: CMakeLists.txt
Modern_C_Training/Assert/src/: main.c
Modern_C_Training/Embed/: image_generator.c  test_embed.c
Modern_C_Training/Embed/HasEmbed/: image.ppm  main.c
Modern_C_Training/Files/Binary/: CMakeLists.txt
Modern_C_Training/Files/Binary/src/: main.c
Modern_C_Training/Generic/: CMakeLists.txt
Modern_C_Training/Generic/src/: main.c
Modern_C_Training/HelloWorld/: CMakeLists.txt  main.c
Modern_C_Training/Sample/: CMakeLists.txt
Modern_C_Training/Sample/src/: main.c
Modern_C_Training/Special_libs/LibPNG/: CMakeLists.txt
Modern_C_Training/Special_libs/LibPNG/src/: main.c
Modern_C_Training/Special_libs/SDL3/: CMakeLists.txt
Modern_C_Training/Special_libs/SDL3/src/: main.c
Modern_C_Training/String/Chars/: CMakeLists.txt  main.c
Modern_C_Training/String/Chars/include/: charHandler.h
Modern_C_Training/String/Chars/src/: charHandler.c  main.c
Modern_C_Training/Struct/Matrix/: CMakeLists.txt  main.c
Modern_C_Training/Struct/Matrix/include/: matrix.h
Modern_C_Training/Struct/Matrix/src/: matrix.c
Modern_C_Training/Struct/Matrix/test/: test.c
Modern_C_Training/Struct/SecureAuth/: CMakeLists.txt
Modern_C_Training/Struct/SecureAuth/include/: secure_auth.h
Modern_C_Training/Struct/SecureAuth/src/: main.c  secure_auth.c
Modern_C_Training/Tic-Tac-Toe/: CMakeLists.txt  main.c
Modern_C_Training/Tic-Tac-Toe/include/: engine.h
Modern_C_Training/Tic-Tac-Toe/src/: engine.c
Modern_C_Training/Tic-Tac-Toe/test/: test.c
Modern_C_Training/Variadic/: CMakeLists.txt
Modern_C_Training/Variadic/src/: main.c
